--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="theme-color" content="#56b4d3">
     <link rel="stylesheet" href="%PUBLIC_URL%/css/bootstrap.min.css"></link>
     <link rel="stylesheet" href="%PUBLIC_URL%/css/ionicons.min.css"></link>
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
