--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#56b4d3">
     <link rel="stylesheet" href="%PUBLIC_URL%/css/bootstrap.min.css"></link>
-    <link rel="stylesheet" href="%PUBLIC_URL%/css/ionicons.min.css"></link>
+    <!-- <link rel="stylesheet" href="%PUBLIC_URL%/css/ionicons.min.css"></link> -->
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <!--
       manifest.json provides metadata used when your web app is added to the
