--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#56b4d3">
     <link rel="stylesheet" href="%PUBLIC_URL%/css/bootstrap.min.css"></link>
     <!-- <link rel="stylesheet" href="%PUBLIC_URL%/css/ionicons.min.css"></link> -->
