--- a/src/public/index.html
+++ b/src/public/index.html
@@ -1,27 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <title>Casper's Resume</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width,initial-scale=1">
+        <meta name="theme-color" content="#56b4d3">
+        <!-- <link rel="stylesheet" href="/css/bootstrap.min.css"> -->
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+        <link rel="manifest" href="/manifest.json">
+        <link rel="shortcut icon" href="/favicon.ico">
+        <link rel="stylesheet" href="/static/css/main.7d765a60.css">
+        <link rel="stylesheet" href="/static/css/main.7d765a60.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+    </head>
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <meta name="theme-color" content="#56b4d3">
-    <!-- <link rel="stylesheet" href="/css/bootstrap.min.css"> -->
-    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-    <link rel="manifest" href="/manifest.json">
-    <link rel="shortcut icon" href="/favicon.ico">
-    <title>Casper's Personal Website</title>
-    <link href="/static/css/main.7d765a60.css" rel="stylesheet">
-    <link href="/static/css/main.7d765a60.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
-</head>
+    <body><noscript>You need to enable JavaScript to run this app.</noscript>
+        <script type="text/javascript" src="/static/js/main.d8d25ce6.js"></script>
+        <script type="text/javascript" src="/static/js/main.d8d25ce6.js"></script>
+        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.slim.min.js"></script>
+        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
 
-<body><noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <script type="text/javascript" src="/static/js/main.d8d25ce6.js"></script>
-    <script type="text/javascript" src="/static/js/main.d8d25ce6.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
-</body>
-
+        <div id="root"></div>
+    </body>
 </html>
