--- a/public/index.html
+++ b/public/index.html
@@ -9,14 +9,14 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
         <link rel="manifest" href="/manifest.json">
         <link rel="shortcut icon" href="/favicon.ico">
-        <link rel="stylesheet" href="/static/css/main.7d765a60.css">
-        <link rel="stylesheet" href="/static/css/main.7d765a60.css">
+        <link rel="stylesheet" href="/public/static/css/main.7d765a60.css">
+        <link rel="stylesheet" href="/public/static/css/main.7d765a60.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
     </head>
 
     <body><noscript>You need to enable JavaScript to run this app.</noscript>
-        <script type="text/javascript" src="/static/js/main.d8d25ce6.js"></script>
-        <script type="text/javascript" src="/static/js/main.d8d25ce6.js"></script>
+        <script type="text/javascript" src="/public/static/js/main.d8d25ce6.js"></script>
+        <script type="text/javascript" src="/public/static/js/main.d8d25ce6.js"></script>
         <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.slim.min.js"></script>
         <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
         <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
